--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@model List<BookCave.Models.ViewModels.BookListViewModel>
+
 <div>
+    <h3>Vinsælar</h3>
     @foreach(var book in @Model)
     {
         <p>@book.Name</p>
     }
 </div>
+
+
