--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,8 +26,17 @@
         <div class="container">      
             <div>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">BookCave</a>
-                <input type="text" name="search-bar" placeholder="Leitaðu að bók..."/>
-                <input type="submit" value="Leita"/>
+                
+                <form class="navbar-form navbar-left" action="/action_page.php">
+                    <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                    </div>
+                </form>
                 <a asp-area="" asp-controller="Home" asp-action="Cart"><img src="~/images/cart.png" alt="cart"/></a>
                 <a asp-area="" asp-controller="Home" asp-action="Login"><img src="~/images/user.png" alt="user"/></a>
             </div>
@@ -41,9 +50,27 @@
                 </button>  
             </div>
             
-            <div class="navbar-collapse collapse">
+            <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Efnisflokkar <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-controller="Book" asp-action="Category">Metsölulistinn</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Klassískar</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Spenna</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Gaman</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Ævintýri</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Barna og unglingabækur</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Námsbækur og ljóð</a></li>
+                        </ul>
+                    </li>
+                <li><a asp-controller="Home" asp-action="SpecialOrd">Sérpöntun</a></li>
+                <li><a asp-controller="Home" asp-action="Donate">Ég vil styrkja!</a></li>
+                <li><a asp-controller="Home" asp-action="About">Um Okkur</a></li>
+                </ul>
+            </div>
+            </nav>
+                        
+                 <!--   <li class="dropdown">
                         <a class="cat-btn">Efnisflokkar</a>
                         <div class="drop-cate">
                             <a asp-controller="Book" asp-action="Category">Metsölulistinn</a>
@@ -56,7 +83,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>-->
     
    <br/>
    <br/>
