--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -4,9 +4,9 @@ img
     height: 30px;
 }
 
-.navbar 
+.header-color
 {
-    background-color: pink;
+    background-color: aquamarine;
 }
 
 footer p
@@ -14,4 +14,12 @@ footer p
     display: inline;
     margin-right: 30px;
 }
+
+.header-right
+{
+    position: absolute;
+    right: 16px; 
+}
+
+
 
