aboutus meira stuff

--- a/Views/Home/OurTeam.cshtml
+++ b/Views/Home/OurTeam.cshtml
@@ -7,13 +7,12 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>My Portfolio</h1>      
-    <p>Some text that represents "Me"...</p>
+    <h1>Teymið okkar</h1>      
+    <p>Hér fyrir neðan gefur að líta bakenda teymi vefsíðunnar...</p>
   </div>
 </div>
 
 <div class="container-fluid bg-3 text-center">    
-  <h3>Teymið okkar</h3><br>
   <div class="row">
     <div class="col-sm-3">
       <p>Dagrún Ósk Jónasdóttir,</p>
