--- a/Views/Home/Terms.cshtml
+++ b/Views/Home/Terms.cshtml
@@ -6,7 +6,7 @@
                 <li><a class="btn btn-info" role="button" asp-controller="Home" asp-action="About">Um okkur</a></li>
             </div>
             <div class="about-button">
-                <li><a class="btn btn-info" role="button" asp-controller="Home" asp-action="Teymið okkar">Teymið okkar</a></li>
+                <li><a class="btn btn-info" role="button" asp-controller="Home" asp-action="OurTeam">Teymið okkar</a></li>
             </div>  
         </ul>
     </div>
