--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,8 +20,60 @@
     </environment>
 </head>
 
-<body>
-    
+    <body>
+        <div class="jumbotron">
+    <div class="container text-center">
+        <h1>Book Cave</h1>      
+        <p>Vefverslun</p>
+    </div>
+    </div>
+
+    <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="#">Logo</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            
+        <ul class="nav navbar-nav">
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Efnisflokkar <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-controller="Book" asp-action="Category">Metsölulistinn</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Klassískar</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Spenna</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Gaman</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Ævintýri</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Barna og unglingabækur</a></li>
+                            <li><a asp-controller="Book" asp-action="Category">Námsbækur og ljóð</a></li>
+                        </ul>
+            </li>
+            <li><a asp-controller="Home" asp-action="SpecialOrd">Sérpöntun</a></li>
+            <li><a asp-controller="Home" asp-action="Donate">Ég vil styrkja!</a></li>
+            <li><a asp-controller="Home" asp-action="About">Um Okkur</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <form class="navbar-form navbar-left" action="/action_page.php">
+                    <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                    </div>
+                </form>
+            <li><a asp-area="" asp-controller="Home" asp-action="Cart"><span class="glyphicon glyphicon-shopping-cart">Karfa</a></li>
+            <li><a asp-area="" asp-controller="Home" asp-action="Login"><span class="glyphicon glyphicon-user"></span>Skráðu þig inn</a></li>
+        </ul>
+        </div>
+    </div>
+    </nav>
+    <!--
     <nav class="navbar navbar-inverse navbar-fixed-top header-color">
         
         <div class="container">      
@@ -83,21 +135,30 @@
             </div>
         </div>
     </nav>-->
-    
-   <br/>
-   <br/>
-   <br/>
-
+   
+ 
     <div class="container body-content">
         @RenderBody()
         <hr />
+            <footer class="container-fluid text-center">
+            <!--<p>Online Store Copyright</p> -->
+            <p>contactus&commat;bookcave.is</p>
+            <p>sími: 581-2345</p>
+            <p>kennitala: 210196-3079</p>
+            <p>Fylgdu okkur!</p>
+            <form class="form-inline">Skráðu þig á póstlistann:
+                <input type="email" class="form-control" size="50" placeholder="Netfang">
+                <button type="button" class="btn btn-danger">Skrá</button>
+            </form>
+            </footer>
+        <!--
         <footer>
             <p>contactus&commat;bookcave.is</p>
             <p>sími: 581-2345</p>
             <p>kennitala: 210196-3079</p>
             <p>Fylgdu okkur!</p>
             <!--<p>&copy; 2018 - BookCave</p>-->
-        </footer>
+        <!--</footer> -->
     </div>
 
     <environment include="Development">
