--- a/Views/Home/Donate.cshtml
+++ b/Views/Home/Donate.cshtml
@@ -1,22 +1,55 @@
-<button>Til baka</button>
-<h1>Við viljum að allir fái tækifæri til þess að lesa!</h1>
+<link rel="stylesheet" type="text/css" href="~/css/donate.css">
 
-<p>Um allan heim eru milljónir manns sem geta ekki nýtt sér hæfileika sína til fulls að sökum lélegs aðgengis að 
-    lesefni. Rannsóknir hafa leitt í ljós að gott aðgengi að bókum dregur gríðarlega úr fátækt og veitir 
-    einstaklingum möguleika á góðri vinnu, góðum launum og betri heilsu barna. Börn í þróunarlöndum, sem eiga
-    læsa móður, eru helmingi líklegri að lifa lengur en til 5 ára aldurs.</p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-<p>Við vitum hvað lestur hefur gríðarlega jákvæð áhrif og viljum gera allt sem við getum til að auðvelda 
-    aðgengi að bókum í þróunarlöndum. Með hjálp lesturs getur fólk breytt sínu eigin lífi til hins betra.</p>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="~/images/schoolkid.jpg" alt="School kid" width="1200" height="700"/>
+        <div class="carousel-caption">
+          <h3>Við viljum að allir fái tækifæri til þess að lesa</h3>
+          <p>Um allan heim eru milljónir manns sem geta ekki nýtt sér hæfileika sína til fulls að sökum lélegs aðgengis að 
+            lesefni. Rannsóknir hafa leitt í ljós að gott aðgengi að bókum dregur gríðarlega úr fátækt og veitir 
+            einstaklingum möguleika á góðri vinnu, góðum launum og betri heilsu barna.</p>
+        </div>      
+      </div>
 
-<p>Það er enginn vafi á því að lestur hjálpar fólki að öðlast betra líf og móta sína framtíð. Í þróunarlöndum 
-    getur verið gríðarlega erfitt að nálgast bækur. Þar eru bókasöfn besti ef ekki eini staðurinn sem fólk 
-    getur uppgötvað þau jákvæðu áhrif sem lestur hefur. Með því að styrkja okkur styrkir þú bókasöfn í 
-    þróunarlöndum sem keppast að því að veita auðveldan aðgang að bókum. Við vinnum með mörgum útgáfufyrirtækjum
-    sem styðja við bakið á rúmlega 3.000 bókasöfnum víða í Afríku og Asíu með því að senda þeim vel valdar bækur.
-    Þannig tryggjum við betri framtíð og lífsgæði fyrir þá sem minna mega sín.</p>
+      <div class="item">
+        <img src="~/images/group-of-kids.jpg" alt="Happy kids" width="1200" height="700"/>
+        <div class="carousel-caption">
+          <h3>Betri heilsa barna</h3>
+          <p>Börn í þróunarlöndum, sem eiga læsa móður, eru helmingi líklegri að lifa lengur en til 5 ára aldurs.</p>
+        </div>      
+      </div>
+    
+      <div class="item">
+        <img src="/images/kid-smiling.jpg" alt="Kids with book" width="1200" height="700"/>
+        <div class="carousel-caption"/>
+          <h3>Bjartari framtíð</h3>
+          <p>Við vinnum með mörgum útgáfufyrirtækjum sem styðja við bakið á rúmlega 3.000 bókasöfnum víða í Afríku og Asíu með því að senda þeim vel valdar bækur.
+              Þannig tryggjum við betri framtíð og lífsgæði fyrir þá sem minna mega sín.</p>
+        </div>      
+      </div>
+    </div>
 
-<h3>Þitt framlag skiptir máli!</h3>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<h1>Þitt framlag skiptir máli!</h1>
 <form>
     <label for="name">Fullt nafn:</label>
     <input style="text" id="name">
@@ -38,3 +71,5 @@
     <input type="checkbox" name="terms" value="terms"> Ég samþykki skilmála
     <input type="submit" value="Greiða fyrir framlag">
 </form>
+
+<script src="~/js/donate.js"></script>
