lagfæringar i um okkur

--- a/Views/Home/Terms.cshtml
+++ b/Views/Home/Terms.cshtml
@@ -20,11 +20,11 @@
           Þetta á einnig við ef um villur í reiknireglum vefverslunnar eiga sér stað.</p>
 
         <h3>Afhending vöru</h3>
-        <p>(SKOÐA TEXTA FYRIR SÉRPÖNTUN) Fyrirtækjaþjónusta Pennans dreifir vörum til viðskiptavina sinna á Höfuðborgarsvæðinu. Öllum öðrum pöntunum er dreift af Póstinum. Sendingarkostnaður er reiknaður út 
+        <p>Fyrirtækjaþjónusta BookCave dreifir vörum til viðskiptavina sinna á Höfuðborgarsvæðinu. Öllum öðrum pöntunum er dreift af Póstinum. Sendingarkostnaður er reiknaður út 
             frá gjaldskrá Póstsins með tilliti til áfangastaðar og fjölda vara, stærð þeirra og þyngd. Reynt er eftir fremsta megni að afgreiða öll kaup næsta virka dag eftir pöntun. 
             Sé varan ekki til á lager mun starfsmaður hafa samband og tilkynna um áætlaðan afhendingartíma vörunnar. Gilda afhendingar-, ábyrgðar- og flutningsskilmálar Íslandspósts um afhendingu vöru frá Póstinum. 
-            Skilmálar Póstsins eru aðgengilegir á vefsíðu fyrirtækisins. Penninn.is ber samkvæmt þessu enga ábyrgð á tjóni sem kann að verða á vöru í flutningi Póstsins. Verði vara fyrir tjóni frá því að að hún er send frá 
-            Pennanum Eymundsson og þar til hún berst viðtakanda er tjónið á ábyrgð flutningsaðila.</p>
+            Skilmálar Póstsins eru aðgengilegir á vefsíðu fyrirtækisins. BookCave ber samkvæmt þessu enga ábyrgð á tjóni sem kann að verða á vöru í flutningi Póstsins. Verði vara fyrir tjóni frá því að að hún er send frá 
+            höfuðstöðvum BookCave og þar til hún berst viðtakanda er tjónið á ábyrgð flutningsaðila.</p>
 
         <h3>Skilafrestur</h3>
         <p>Kaupandi hefur 14 daga til að hætta við kaupin að því tilskildu að hann hafi ekki notað vöruna, henni sé skilað í góðu lagi í óuppteknum upprunalegum umbúðum. Ef vara er innsigluð má ekki rjúfa innsiglið. 
@@ -39,15 +39,7 @@
         <h3>Varnarþing</h3>
         <p>Þessi samningur er í samræmi við íslensk lög. Rísi mál vegna hans, skal það rekið fyrir íslenskum dómstóli. Um skilmála þessa gilda ákvæði laga um húsgöngu- og fjarsölu nr. 96/1992, ákvæði laga um lausafjárkaup nr. 50/2000 
             eftir því sem við getur átt og ákvæði laga um neytendakaup nr. 48/2003. Allir frestir sem nefndir eru í lögum nr. 96/1992 byrja að líða móttaka vöru á sér stað.</p>
-      <hr>
-    </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
+      <hr/>
     </div>
   </div>
 </div>
