--- a/Views/Home/OurTeam.cshtml
+++ b/Views/Home/OurTeam.cshtml
@@ -12,28 +12,28 @@
   </div>
 </div>
 
-<div class="container-fluid bg-3 text-center">    
+<div class="container-fluid bg-3 text-center"><br/><br/>    
   <div class="row">
     <div class="col-sm-3">
       <p>Dagrún Ósk Jónasdóttir,</p>
       <p>grafískur hönnuður</p>
-      <img src="~/images/dagrun.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="~/images/dagrun.jpg" class="img-responsive" style="width:100%" alt="Image"/>
     </div>
     <div class="col-sm-3"> 
       <p>Harpa Guðrún Hreinsdóttir,</p>
       <p>sérfræðingur í gagnagrunni</p>
-      <img src="~/images/harpa.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="~/images/harpa.jpg" class="img-responsive" style="width:100%" alt="Image"/>
     </div>
     <div class="col-sm-3"> 
       <p>Vigdís Birna Þorsteinsdóttir,</p>
       <p>forstöðukona forritarateymis</p>
-      <img src="~/images/vigdis.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="~/images/vigdis.jpg" class="img-responsive" style="width:100%" alt="Image"/>
     </div>
     <div class="col-sm-3">
       <p>Þorgeir Kristján Þorgeirsson,</p>
       <p>andlegur stuðningsmaður</p>
-      <img src="~/images/thorgeir.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="~/images/thorgeir.jpg" class="img-responsive" style="width:100%" alt="Image"/>
     </div>
   </div>
-</div><br>
+</div><br/>
 
