--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/styles.css">
         <link rel="stylesheet" href="~/css/frontpage.css">
+        <link rel="stylesheet" href="~/css/addbook.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -175,6 +176,7 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/js/frontpage.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/js/addbook.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
