--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="~/css/styles.css">
         <link rel="stylesheet" href="~/css/frontpage.css">
         <link rel="stylesheet" href="~/css/addbook.css">
+        <link rel="stylesheet" href="~/css/donate.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -147,12 +148,10 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/js/frontpage.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-<<<<<<< HEAD
         <script src="~/js/addbook.js" asp-append-version="true"></script>
-=======
+        <script src="~/js/donate.js" asp-append-version="true"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script> <!--added this for cart -harpa -->
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> <!--added this for cart -harpa -->
->>>>>>> 5b98e264cd8073ee3bf1cda1c154f0c147b41364
     </environment>
 
     @RenderSection("Scripts", required: false)
