--- a/wwwroot/css/donate.css
+++ b/wwwroot/css/donate.css
@@ -2,3 +2,23 @@
     width: 100%;
     margin: auto;
 }
+
+.carousel-caption p {
+    background-color: rgba(128, 128, 128, 0.548);
+}
+.carousel-caption h3 {
+    font-size: 32px;
+    padding: 10px;
+    color: rgb(255, 145, 0);
+    background-color: rgba(128, 128, 128, 0.548);
+}
+
+#title {
+    padding-top: 10px; 
+    color: rgb(255, 145, 0);
+    font-weight: bold;
+}
+
+.form-check {
+    padding-top: 14px;
+}
