--- a/Views/Home/Donate.cshtml
+++ b/Views/Home/Donate.cshtml
@@ -8,9 +8,9 @@
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
+    <div class="item active" id="donateCarousel">
       <img src="~/images/schoolkid.jpg" alt="School kid" width="1200" height="700"/>
-      <div class="carousel-caption">
+      <div class="carousel-caption d-none d-md-block">
         <h3>Við viljum að allir fái tækifæri til þess að lesa</h3>
         <p>Um allan heim eru milljónir manns sem geta ekki nýtt sér hæfileika sína til fulls að sökum lélegs aðgengis að 
           lesefni. Rannsóknir hafa leitt í ljós að gott aðgengi að bókum dregur gríðarlega úr fátækt og veitir 
@@ -18,17 +18,17 @@
       </div>      
     </div>
 
-    <div class="item">
+    <div class="item" id="donateCarousel">
       <img src="~/images/group-of-kids.jpg" alt="Happy kids" width="1200" height="700"/>
-      <div class="carousel-caption">
+      <div class="carousel-caption d-none d-md-block">
         <h3>Betri heilsa barna</h3>
         <p>Börn í þróunarlöndum, sem eiga læsa móður, eru helmingi líklegri að lifa lengur en til 5 ára aldurs.</p>
       </div>      
     </div>
   
-    <div class="item">
+    <div class="item" id="donateCarousel">
       <img src="/images/kid-smiling.jpg" alt="Kids with book" width="1200" height="700"/>
-      <div class="carousel-caption"/>
+      <div class="carousel-caption d-none d-md-block">
         <h3>Bjartari framtíð</h3>
         <p>Við vinnum með mörgum útgáfufyrirtækjum sem styðja við bakið á rúmlega 3.000 bókasöfnum víða í Afríku og Asíu með því að senda þeim vel valdar bækur.
             Þannig tryggjum við betri framtíð og lífsgæði fyrir þá sem minna mega sín.</p>
