--- a/wwwroot/css/donate.css
+++ b/wwwroot/css/donate.css
@@ -3,14 +3,13 @@
     margin: auto;
 }
 
-.carousel-caption p {
-    background-color: rgba(128, 128, 128, 0.548);
+#donateCarousel p {
+    background-color: rgba(128, 128, 128, 0.753);
 }
-.carousel-caption h3 {
+#donateCarousel h3 {
     font-size: 32px;
-    padding: 10px;
-    color: rgb(255, 145, 0);
-    background-color: rgba(128, 128, 128, 0.548);
+    color: rgb(255, 102, 0);
+    background-color: rgba(128, 128, 128, 0.753);
 }
 
 #title {
