view for logged user

--- a/Views/Home/loggedUser.cshtml
+++ b/Views/Home/loggedUser.cshtml
@@ -1,9 +1,9 @@
 <div class="container">
       <div class="row">
       <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
-           <A href="edit.html" >Edit Profile</A>
+           <A href="edit.html" >Breyta</A>
 
-        <A href="edit.html" >Logout</A>
+        <A href="edit.html" >Útskrá</A>
        <br>
 <p class=" text-info">May 05,2014,03:00 pm </p>
       </div>
@@ -12,11 +12,11 @@
    
           <div class="panel panel-info">
             <div class="panel-heading">
-              <h3 class="panel-title">Sheena Shrestha</h3>
+              <h3 class="panel-title">Harpa Guðrún Hreinsdóttir</h3>
             </div>
             <div class="panel-body">
               <div class="row">
-                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
+                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="blabla.jpg" class="img-circle img-responsive"> </div>
                 
                 <!--<div class="col-xs-10 col-sm-10 hidden-md hidden-lg"> <br>
                   <dl>
@@ -34,33 +34,29 @@
                   <table class="table table-user-information">
                     <tbody>
                       <tr>
-                        <td>Department:</td>
-                        <td>Programming</td>
+                        <td>Netfang:</td>
+                        <td>harpahreins96@gmail.com</td>
                       </tr>
                       <tr>
-                        <td>Hire date:</td>
-                        <td>06/23/2013</td>
-                      </tr>
-                      <tr>
-                        <td>Date of Birth</td>
-                        <td>01/24/1988</td>
+                        <td>Fæðingardagur:</td>
+                        <td>21/01/1996</td>
                       </tr>
                    
                          <tr>
                              <tr>
-                        <td>Gender</td>
-                        <td>Female</td>
+                        <td>Kyn</td>
+                        <td>Kvenkyns</td>
                       </tr>
                         <tr>
-                        <td>Home Address</td>
-                        <td>Kathmandu,Nepal</td>
+                        <td>Heimilisfang</td>
+                        <td>Krókamýri 30</td>
                       </tr>
                       <tr>
-                        <td>Email</td>
-                        <td><a href="mailto:info@support.com">info@support.com</a></td>
+                        <td>Netfang</td>
+                        <td><a href="mailto:info@support.com">harpahreins96@gmail.com</a></td>
                       </tr>
-                        <td>Phone Number</td>
-                        <td>123-4567-890(Landline)<br><br>555-4567-890(Mobile)
+                        <td>Símanúmer</td>
+                        <td>6612325<br>
                         </td>
                            
                       </tr>
@@ -68,8 +64,8 @@
                     </tbody>
                   </table>
                   
-                  <a href="#" class="btn btn-primary">My Sales Performance</a>
-                  <a href="#" class="btn btn-primary">Team Sales Performance</a>
+                  <a href="#" class="btn btn-primary">Mínar pantanir</a>
+                  <a href="#" class="btn btn-primary">Aukaflipi</a>
                 </div>
               </div>
             </div>
