--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
                                              <div class="help-block text-right"><a href="">Gleymt lykilorð?</a></div>
 										</div>
 										<div class="form-group">
-											 <button type="submit" class="btn btn-primary btn-block">Skrá inn</button>
+											 <button type="submit" asp-controller="Home" asp-action="LoggedUser" class="btn btn-primary btn-block">Skrá inn</button>
 										</div>
 										<div class="checkbox">
 											 <label>
